--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "webhook-platform",
   "version": "1.0.0",
+  "private": true,
+  "license": "MIT",
   "main": "server.js",
+  "engines": {
+    "node": ">=18 <=22"
+  },
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "multer": "^1.4.5",
+    "multer": "1.4.5-lts.1",
     "unzipper": "^0.10.14",
     "uuid": "^9.0.1"
   }
