--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
-  "name": "webhook-platform",
+  "name": "webhook-backend",
   "version": "1.0.0",
-  "private": true,
-  "license": "MIT",
   "main": "server.js",
-  "engines": {
-    "node": ">=18 <=22"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "multer": "1.4.5-lts.1",
-    "unzipper": "^0.10.14",
-    "uuid": "^9.0.1"
+    "node-fetch": "^3.3.1"
   }
 }
